add background and browser sync

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
         Vel est eligendi soluta nam. Reprehenderit quo ducimus odit placeat itaque molestias pariatur obcaecati architecto corporis quidem enim omnis, asperiores laudantium ipsam inventore neque! Natus fugit inventore aliquam sapiente reprehenderit?
         Nihil explicabo fugit cupiditate, accusamus eum aspernatur itaque libero cumque illo expedita quia cum quisquam non, maxime laborum, id impedit ducimus sit? Facere quasi iste quas accusamus reiciendis? Quas, earum!</p>
     </section>
+    <script id="__bs_script__">//<![CDATA[
+        document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.26.5'><\/script>".replace("HOST", location.hostname));
+    //]]></script>
 </body>
 </html>
