--- a/travel.html
+++ b/travel.html
@@ -10,12 +10,12 @@
   <body>
     <h1>The adventures of A.K</h1>
     <h2>
-        <div class="main-links">
-      <a href="travel.html">--Travel</a>
-      <a href="living-abroad.html">Living abroad</a>
-      <a href="personal.html">Personal</a>
-      <a href="career.html"> Career--</a>
-    </div>
+      <div class="main-links">
+        <a href="travel.html">--Travel</a>
+        <a href="living-abroad.html">Living abroad</a>
+        <a href="personal.html">Personal</a>
+        <a href="career.html"> Career--</a>
+      </div>
     </h2>
     <div><img src="./img/paper-plane.png" alt="" class="photo-logo" /></div>
     <div class="contact">
@@ -33,33 +33,41 @@
     </div>
 
     <div class="photo-menu"></div>
-        <menu class="container">
-          <a href="madridlife.html" class=""
-            ><img src="./img/morocco-main.jpg" alt="picture of madrid" class="travelphoto"
-           
-          /> <p class="title1" Morocco Blog ></p></a>
-  
-          <a href="madridlife.html" class=""
-            ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
-          /></a>
-  
-          <a href="madridlife.html" class=""
-            ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
-          /></a>
-  
-          <a href="madridlife.html" class=""
-            ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
-          /></a>
-  
-          <a href="madridlife.html" class=""
-            ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
-          /></a>
-  
-          <a href="madridlife.html" class=""
-            ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
-          /></a>
-        </menu>
-      </div>
-    </body>
-  </html>
-  
+    <div class="blog-title">
+      <menu class="container">
+      <a href="madridlife.html" class=""
+        ><img
+          src="./img/morocco-main.jpg"
+          alt="picture of madrid"
+          class="travelphoto"/>
+        <p class="blog1"> Morocco Blog</p
+      ></a>
+
+      <a href="madridlife.html" class=""
+        ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
+      /><p class="blog2"> CoteAzur Blog</p
+        ></a>
+
+      <a href="madridlife.html" class=""
+        ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
+      /><p class="blog3"> Italy Blog</p
+        ></a>
+
+      <a href="madridlife.html" class=""
+        ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
+      /><p class="blog4"> Spain Blogs</p
+        ></a>
+
+      <a href="madridlife.html" class=""
+        ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
+      /><p class="blog5"> London Blog</p
+        ></a>
+
+      <a href="madridlife.html" class=""
+        ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
+      /><p class="blog6"> Prague Blog</p
+        ></a>
+    </div>
+    </menu>
+  </body>
+</html>
