--- a/travel.html
+++ b/travel.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
+    <link href="index1.css" rel="stylesheet" type="text/css" />
     <link href="styles.css" rel="stylesheet" type="text/css" />
+    <link href="travel.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>The adventures of A.K</h1>
+    <a href="index1.html" class="main-links"
+        ><h1>The adventures of A.K</h1></a
+      >
     <h2>
       <div class="main-links">
         <a href="travel.html">--Travel</a>
@@ -17,7 +21,9 @@
         <a href="career.html"> Career--</a>
       </div>
     </h2>
-    <div><img src="./img/paper-plane.png" alt="" class="photo-logo" /></div>
+    <div>
+          <img src="./img/paper-plane.png" alt="" class="photo-logo"
+        /></div>
     <div class="contact">
       <a href="facebook.com" class=""
         ><img src="./img/fb-logo.png" alt="picture of madrid" class=""
@@ -32,40 +38,40 @@
       /></a>
     </div>
 
-    <div class="photo-menu"></div>
-    <div class="blog-title">
+    <div class="blog-menu"></div>
+    
       <menu class="container">
-      <a href="madridlife.html" class=""
+      <div class="menu1"><a href="morocco.html" class=""
         ><img
           src="./img/morocco-main.jpg"
           alt="picture of madrid"
           class="travelphoto"/>
-        <p class="blog1"> Morocco Blog</p
-      ></a>
+        <p class="blog-title"> Morocco Blog</p
+      ></a></div>
 
       <a href="madridlife.html" class=""
-        ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
-      /><p class="blog2"> CoteAzur Blog</p
+        ><img src="./img/cathedral.jpg" alt="picture of madrid" class="travelphoto"
+      /><p class="blog-title"> Cote d´Azur Blog</p
+        ></a>
+
+      <a href="madridlife.html" class=""
+        ><img src="./img/italy.jpg" alt="picture of madrid" class="travelphoto"
+      /><p class="blog-title"> Italy Blog</p
+        ></a>
+
+      <a href="madridlife.html" class=""
+        ><img src="./img/seville.jpg" alt="picture of madrid" class="travelphoto"
+      /><p class="blog-title"> Spain Blogs</p
         ></a>
 
       <a href="madridlife.html" class=""
         ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
-      /><p class="blog3"> Italy Blog</p
+      /><p class="blog-title"> London Blog</p
         ></a>
 
       <a href="madridlife.html" class=""
         ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
-      /><p class="blog4"> Spain Blogs</p
-        ></a>
-
-      <a href="madridlife.html" class=""
-        ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
-      /><p class="blog5"> London Blog</p
-        ></a>
-
-      <a href="madridlife.html" class=""
-        ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
-      /><p class="blog6"> Prague Blog</p
+      /><p class="blog-title"> Prague Blog</p
         ></a>
     </div>
     </menu>
