--- a/personal.html
+++ b/personal.html
@@ -10,18 +10,22 @@
   </head>
   <body>
     <header class="content header">
-      <div class="main-links">
-        <a href="index1.html" class="main-links"
-          ><h1>The adventures of A.K</h1></a
-        >
-        <div class="wrapper">
+      <a href="index1.html" class="main-links"
+        ><h1>The adventures of A.K</h1></a
+      >
+      <div class="wrapper">
+        <div class="main-links">
           <a href="travel.html"><h2>--Travel</h2></a>
           <a href="living-abroad.html"><h2>Living abroad</h2></a>
           <a href="personal.html"><h2>Personal</h2></a>
           <a href="career.html"><h2>Career--</h2></a>
         </div>
       </div>
-      <div><img src="./img/paper-plane.png" alt="" class="photo-logo" /></div>
+      <div>
+        <a href="index1.html"
+          ><img src="./img/paper-plane.png" alt="" class="photo-logo"
+        /></a>
+      </div>
       <div class="contact">
         <a href="facebook.com"
           ><img src="./img/fb-logo.png" alt="picture of fb logo"
@@ -35,12 +39,6 @@
           ><img src="./img/twitter-logo.png" alt="picture of twitter logo"
         /></a>
       </div>
-
-      <div class="photo-menu"></div>
     </header>
-
-    <main class="wrapper content">
-      <img src="./img/index-photo.jpg" alt="profilepic" class="profile-photo" />
-    </main>
   </body>
 </html>
