Keep aspect ratio

--- a/index1.html
+++ b/index1.html
@@ -20,22 +20,24 @@
           <a href="personal.html"><h2>Personal</h2></a>
           <a href="career.html"><h2>Career--</h2></a>
         </div>
+
+        <div><img src="./img/paper-plane.png" alt="" class="photo-logo" /></div>
+        <div class="contact-box">
+          <div class="contact">
+            <a href="facebook.com" target="_blank"
+              ><img src="./img/fb-logo.png" alt="picture of fb logo"
+            /></a>
+
+            <a href="facebook.com" target="_blank"
+              ><img src="./img/insta-logo.png" alt="picture of instagram logo"
+            /></a>
+
+            <a href="https://twitter.com/gregg_aisha " target="_blank"
+              ><img src="./img/twitter-logo.png" alt="picture of twitter logo"
+            /></a>
+          </div>
+        </div>
       </div>
-      <div><img src="./img/paper-plane.png" alt="" class="photo-logo" /></div>
-      <div class="contact">
-        <a href="facebook.com"
-          ><img src="./img/fb-logo.png" alt="picture of fb logo"
-        /></a>
-
-        <a href="facebook.com"
-          ><img src="./img/insta-logo.png" alt="picture of instagram logo"
-        /></a>
-
-        <a href="twitter.com"
-          ><img src="./img/twitter-logo.png" alt="picture of twitter logo"
-        /></a>
-      </div>
-
       <div class="photo-menu"></div>
     </header>
 
