--- a/travel.html
+++ b/travel.html
@@ -10,68 +10,73 @@
     <link href="travel.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <a href="index1.html" class="main-links"
-        ><h1>The adventures of A.K</h1></a
-      >
-    <h2>
+    <header class="content header">
       <div class="main-links">
-        <a href="travel.html">--Travel</a>
-        <a href="living-abroad.html">Living abroad</a>
-        <a href="personal.html">Personal</a>
-        <a href="career.html"> Career--</a>
+        <a href="index1.html" class="main-links"
+          ><h1>The adventures of A.K</h1></a
+        >
+        <div class="wrapper">
+          <a href="travel.html"><h2>--Travel</h2></a>
+          <a href="living-abroad.html"><h2>Living abroad</h2></a>
+          <a href="personal.html"><h2>Personal</h2></a>
+          <a href="career.html"><h2>Career--</h2></a>
+        </div>
+
+        <div><img src="./img/paper-plane.png" alt="" class="photo-logo" /></div>
+        <div class="contact-box">
+          <div class="contact">
+            <a href="facebook.com" target="_blank"
+              ><img src="./img/fb-logo.png" alt="picture of fb logo"
+            /></a>
+
+            <a href="facebook.com" target="_blank"
+              ><img src="./img/insta-logo.png" alt="picture of instagram logo"
+            /></a>
+
+            <a href="https://twitter.com/gregg_aisha " target="_blank"
+              ><img src="./img/twitter-logo.png" alt="picture of twitter logo"
+            /></a>
+          </div>
+        </div>
       </div>
-    </h2>
-    <div>
-          <img src="./img/paper-plane.png" alt="" class="photo-logo"
-        /></div>
-    <div class="contact">
-      <a href="facebook.com" class=""
-        ><img src="./img/fb-logo.png" alt="picture of madrid" class=""
-      /></a>
+      <div class="photo-menu"></div>
+    </header>
 
-      <a href="facebook.com" class=""
-        ><img src="./img/insta-logo.png" alt="picture of madrid" class=""
-      /></a>
-
-      <a href="facebook.com" class=""
-        ><img src="./img/twitter-logo.png" alt="picture of madrid" class=""
-      /></a>
-    </div>
 
     <div class="blog-menu"></div>
     
       <menu class="container">
-      <div class="menu1"><a href="morocco.html" class=""
-        ><img
+     <a href="morocco.html">
+       <img
           src="./img/morocco-main.jpg"
           alt="picture of madrid"
-          class="travelphoto"/>
-        <p class="blog-title"> Morocco Blog</p
+          />
+        <p class="blog-title">Morocco Blog</p
       ></a></div>
 
-      <a href="madridlife.html" class=""
-        ><img src="./img/cathedral.jpg" alt="picture of madrid" class="travelphoto"
-      /><p class="blog-title"> Cote d´Azur Blog</p
+      <a href="madridlife.html">
+        <img src="./img/cathedral1 (1).png" alt="picture of madrid" 
+      /><p class="blog-title">Cote d´Azur Blog</p
         ></a>
 
-      <a href="madridlife.html" class=""
-        ><img src="./img/italy.jpg" alt="picture of madrid" class="travelphoto"
-      /><p class="blog-title"> Italy Blog</p
+      <a href="madridlife.html">
+        <img src="./img/italy1.png" alt="picture of madrid" 
+      /><p class="blog-title">Italy Blog</p
         ></a>
 
-      <a href="madridlife.html" class=""
-        ><img src="./img/seville.jpg" alt="picture of madrid" class="travelphoto"
-      /><p class="blog-title"> Spain Blogs</p
+      <a href="madridlife.html">
+        <img src="./img/seville.jpg" alt="picture of madrid" 
+      /><p class="blog-title">Spain Blogs</p
         ></a>
 
-      <a href="madridlife.html" class=""
-        ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
-      /><p class="blog-title"> London Blog</p
+      <a href="madridlife.html">
+        <img src="./img/madrid.jpg" alt="picture of madrid" 
+      /><p class="blog-title">London Blog</p
         ></a>
 
-      <a href="madridlife.html" class=""
-        ><img src="./img/madrid.jpg" alt="picture of madrid" class="travelphoto"
-      /><p class="blog-title"> Prague Blog</p
+      <a href="madridlife.html">
+        <img src="./img/madrid.jpg" alt="picture of madrid" 
+      /><p class="blog-title">Prague Blog</p
         ></a>
     </div>
     </menu>
