--- a/morocco.html
+++ b/morocco.html
@@ -35,10 +35,10 @@
         ><img src="./img/twitter-logo.png" alt="picture of madrid" class=""
       /></a>
     </div>
-
+    <div class="main">
     <div class="morocco-blog">
       <p>
-        One of the most valuable things in my life is to be able to go where my
+        One of the most valuable things in life is to be able to go where your
         heart leads, in order to discover something new and life changing. In
         May,I discovered the country of Morocco in all its splender, poverty and
         culture. I travelled from Madrid to Fez on Tuesday the 30th of April. It
@@ -48,15 +48,42 @@
         the airport reminded me of small airports in the caribbean, even the one
         in my home country in Tobago. Getting through security took awhile and I
         must say they are very strict with travellers, especially if you need a
-        visa like I did prepare to wait about 20 minutes or more to get through.
-        Finally outside, we took a taxi to our Airbnb.And from this point the
-        flood of similarities between my country and morocco began.First of all
+        visa (like I did) prepare to wait about 30 minutes or more to get
+        through.<br />
+        Finally outside, we took a taxi to our Airbnb and from this point the
+        flood of similarities between my country and Morocco began.First of all;
         traffic is crazy and the people drive quickly.Lack of pedestrian walks
         meant there were people running into the street left right and center in
-        order to evade oncoming traffic. When we safely arrived to our airbnb we
-        were greeted by a lovely italian guy and his wife.The apartment was the
-        highest floor with beautiful views of the Fez mountains.
+        order to evade oncoming traffic.Those of you of live in countries with
+        few pedestrain walks can surely imagine the chaos before my eyes. When we
+        safely and thankfully arrived at our airbnb we were greeted by our
+        lovely italian hostand his wife.The apartment was on the highest floor with
+        beautiful views of the Fez mountains. That evening we rested and took a
+        quick walk around the center of Fez, we ate at a restuarant which was
+        French. It was called . I had the pasta and my companion steak. The next
+        day we visited the medina of Fez which I must say is the safest one we
+        visited. It was adorned with chaotic scenery; people selling items in
+        the streets, those narrow claustrophobic streets which made it
+        impossible for four persons to pass at a time... There were stalls
+        selling jewelry ,cloth and souvenirs. We stopped to enjoy the sweet
+        deserts they make there which are called Chebakia.They are sesame like
+        cookies fried and dipped in honey. You will love it if you have quite a
+        generous sweet tooth! 
+        <div class ="car-trip" ><img src="./img/car-trip.jpg" alt="picture of madrid" class="photo1"
+      /> </div>
+
+        The most rewarding experience was coming the next
+        day as we were going on a trip to the Sahara desert.It would take about
+        a day to arrive so we prepared ourselves mentally for the long journey
+        ahead.We met two friendly guys, one from Spain and the other from
+        Greece.Our driver Hassan took the four of us through the Swiss city of
+        Morocco and then through the largest Oasis in Morocco before we arrived
+        in Mezouga. Mezouga was pretty interesting.It is basically a city made
+        of clay and sand that sits right next to the sahara! We were dropped at
+        a hotel and relaxed by the pool for about an hour before our camels came
+        to meet us.
       </p>
     </div>
+  </div>
   </body>
 </html>
