restyle image links

--- a/career.html
+++ b/career.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link href="index1.css" rel="stylesheet" type="text/css" />
+    <link href="index.css" rel="stylesheet" type="text/css" />
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header class="content header">
-      <a href="index1.html" class="main-links"
-        ><h1>The adventures of A.K</h1></a
-      >
+      <a href="index.html" class="main-links"><h1>The adventures of A.K</h1></a>
       <div class="wrapper">
         <div class="main-links">
           <a href="travel.html"><h2>--Travel</h2></a>
@@ -20,11 +18,11 @@
           <a href="personal.html"><h2>Personal</h2></a>
           <a href="career.html"><h2>Career--</h2></a>
         </div>
-      </div>
-      <div>
-        <a href="index1.html"
-          ><img src="./img/paper-plane.png" alt="" class="photo-logo"
-        /></a>
+        <div>
+          <a href="index.html"
+            ><img src="./img/paper-plane.png" alt="" class="photo-logo"
+          /></a>
+        </div>
       </div>
       <div class="contact">
         <a href="facebook.com"
