--- a/living-abroad.html
+++ b/living-abroad.html
@@ -5,40 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link href="index1.css" rel="stylesheet" type="text/css" />
+    <link href="index.css" rel="stylesheet" type="text/css" />
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header class="content header">
-      <a href="index1.html" class="main-links"
-        ><h1>The adventures of A.K</h1></a
-      >
-      <div class="wrapper">
-        <div class="main-links">
+      <div class="main-links">
+        <a href="index.html" class="main-links"
+          ><h1>The adventures of A.K</h1></a
+        >
+        <div class="wrapper">
           <a href="travel.html"><h2>--Travel</h2></a>
           <a href="living-abroad.html"><h2>Living abroad</h2></a>
           <a href="personal.html"><h2>Personal</h2></a>
           <a href="career.html"><h2>Career--</h2></a>
         </div>
-      </div>
-      <div>
-        <a href="index1.html"
-          ><img src="./img/paper-plane.png" alt="" class="photo-logo"
-        /></a>
-      </div>
-      <div class="contact">
-        <a href="facebook.com"
-          ><img src="./img/fb-logo.png" alt="picture of fb logo"
-        /></a>
 
-        <a href="facebook.com"
-          ><img src="./img/insta-logo.png" alt="picture of instagram logo"
-        /></a>
-
-        <a href="twitter.com"
-          ><img src="./img/twitter-logo.png" alt="picture of twitter logo"
-        /></a>
+        <div><img src="./img/paper-plane.png" alt="" class="photo-logo" /></div>
       </div>
+      <div class="contact-box">
+        <div class="contact">
+          <a href="https://www.facebook.com/ak.gregg.3" target="_blank"
+            ><img src="./img/fb-logo.png" alt="picture of fb logo"
+          /></a>
+
+          <a href="https://www.instagram.com/kamii_90/" target="_blank"
+            ><img src="./img/insta-logo.png" alt="picture of instagram logo"
+          /></a>
+
+          <a href="https://twitter.com/gregg_aisha " target="_blank"
+            ><img src="./img/twitter-logo.png" alt="picture of twitter logo"
+          /></a>
+        </div>
+      </div>
+
+      <div class="photo-menu"></div>
     </header>
   </body>
 </html>
