--- a/travel.html
+++ b/travel.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link href="index1.css" rel="stylesheet" type="text/css" />
+    <link href="index.css" rel="stylesheet" type="text/css" />
     <link href="styles.css" rel="stylesheet" type="text/css" />
     <link href="travel.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header class="content header">
       <div class="main-links">
-        <a href="index1.html" class="main-links"
+        <a href="index.html" class="main-links"
           ><h1>The adventures of A.K</h1></a
         >
         <div class="wrapper">
@@ -23,6 +23,7 @@
         </div>
 
         <div><img src="./img/paper-plane.png" alt="" class="photo-logo" /></div>
+        </div>
         <div class="contact-box">
           <div class="contact">
             <a href="facebook.com" target="_blank"
@@ -38,7 +39,7 @@
             /></a>
           </div>
         </div>
-      </div>
+      
       <div class="photo-menu"></div>
     </header>
 
