--- a/morocco.html
+++ b/morocco.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link href="index1.css" rel="stylesheet" type="text/css" />
+    <link href="index.css" rel="stylesheet" type="text/css" />
     <link href="styles.css" rel="stylesheet" type="text/css" />
     <link href="travel.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <a href="index1.html" class="main-links"><h1>The adventures of A.K</h1></a>
+    <a href="index.html" class="main-links"><h1>The adventures of A.K</h1></a>
     <h2>
       <div class="main-links">
         <a href="travel.html">--Travel</a>
